# fer

./: pltf0.py  pltf1.py
centro_symmetric/: CMakeLists.txt  F_symb.py  check_after_one_run.py  eta_z_symb.py  exec_checking.py  launch_one_run.py  mk_dir.py  num_FSubcase1.py  one_avg.py  pkl_U_dipole_data2csv.py  plt3D_F.py  pltU.py  plt_F.py  run_mc_centro_symmetric.cpp  trial2_F_subcaseI.py
centro_symmetric/data2csv/: pkl_U_dipole_data2csv.py
centro_symmetric/init_run_scripts/: load_previous_data.py  parseConf.py  search_and_read_summary.py
centro_symmetric/lattice/: lattice.cpp  lattice.hpp
centro_symmetric/mc_subroutine/: mc_read_load_compute.cpp  mc_read_load_compute.hpp
centro_symmetric/oneTCheckObservables/: check_U_dipole_OneT_pkl.py
